--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.90.1",
-    "@vercel/blob": "^2.0.0",
+    "@vercel/blob": "^0.0.2",
+    "bcryptjs": "^3.0.3",
     "framer-motion": "^12.24.7",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
