--- a/.github/workflows/prisma-deploy.yml
+++ b/.github/workflows/prisma-deploy.yml
@@ -13,10 +13,15 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-      - name: Setup pnpm
-        run: npm ci
       - name: Install dependencies
-        run: npm install
+        run: |
+          # Use npm ci when a lockfile is present for reproducible installs,
+          # otherwise fall back to npm install
+          if [ -f package-lock.json ]; then
+            npm ci
+          else
+            npm install
+          fi
       - name: Generate Prisma Client
         run: npx prisma generate --schema=prisma/schema.prisma
         env:
