--- a/.github/workflows/prisma-deploy.yml
+++ b/.github/workflows/prisma-deploy.yml
@@ -15,13 +15,9 @@ jobs:
           node-version: '20'
       - name: Install dependencies
         run: |
-          # Use npm ci when a lockfile is present for reproducible installs,
-          # otherwise fall back to npm install
-          if [ -f package-lock.json ]; then
-            npm ci
-          else
-            npm install
-          fi
+          # Try a clean install first; if the lockfile is out of sync fall back to
+          # a looser install which tolerates peer dependency conflicts.
+          npm ci || npm install --legacy-peer-deps
       - name: Generate Prisma Client
         run: npx prisma generate --schema=prisma/schema.prisma
         env:
